 # [#31128] Double category description newsfeed categories. Thanks Rob de Cleen and David Hurley
 # [#30150] com_content loads articles before error checking. Thanks Richard McDaniel.
 # [#29424] Multilevel select collapsed. Thanks Sergey Romanov.
 + [#31130] Added js files to protostar template and modified index.php. Thanks Buddhima Wijeweera

11-Jun-2013 Jean-Marie Simonet
 $ Adding Czech cs-CZ to installation language files

09-Jun-2013 Jean-Marie Simonet
 # [#30954] Support for accent-insensitive search using the default search component. Thanks Viliam Kubis
 # [#29560] jumping column in Contact Manager: Contacts. Thanks Daria Mikhailova and Roland Dalmulder

08-Jun-2013 Jean-Marie Simonet
 # [#31073] Preview image has height of max 18px. Thanks Piotr Konieczny
 # [#29766] Missed ordering lists in User Manager. Thanks Aleksander Linkov
 # [#30675] Display incorrect for type checkboxes. Thanks Chad Windnagle
 # [#31099] Incorrect Access Levels in Tags List View. Thanks Justin Herrin and Chad Windnagle

07-Jun-2013 Jean-Marie Simonet
 + [#31106] Added Belgian flag for mod_languages. Thanks Fonny Smets
 # [#30804] [3.x] *plug-in manager search give errors and warning for '/','*' and '\

07-Jun-2013 David Hurley
 + [#30370] Added ability to add sprintf variables to JText string. Thanks Peter van Westen

06-Jun-2013 Michael Babker
 + [#30324] *Added ability to restrict the number of displayed results to mod_related_items.  Thanks Ben Tasker and Jean-Marie Simonet

04-Jun-2013 Jean-Marie Simonet
 ^ [#30973] Bootstrap 2.3.2 update. Thanks Anibal Sanchez
 # [#30757] Unpublished blog items output an extra DIV closure, breaking layout. Thanks David Hurley
 # [#30990] 404 Component not found" doesn't added to redirect component, more. Thanks Ofer Cohen

02-Jun-2013 Michael Babker
 ^ Sync Github package to Platform 13.1

01-Jun-2013 Michael Babker
 # [#31057] Missing Read More Button in editing articles.  Thanks Hans Kuijpers